# cppjieba

./: .gitignore  CMakeLists.txt  appveyor.yml  jiaba.def
lib/: CMakeLists.txt  jieba.cpp
